--- a/index.css
+++ b/index.css
@@ -1,3 +1,138 @@
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* 
+html {
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
+} */
 @font-face {
   font-family: 'Inconsolata';
   src: url('./assets/fonts/Inconsolata-VariableFont_wdth,wght.ttf') format('truetype');
@@ -6,13 +141,29 @@
 }
 
 body {
+  padding: 8px 25px;
   font-family:'Inconsolata', monospace;
-  background-image: url(./assets/images/background-desktop.png);
-  /* display: flex;
+  background-image:
+       url(./assets/images/background-desktop.png),
+       url(./assets/images/pattern-circle.svg),
+       url(./assets/images/pattern-circle.svg),
+       url(./assets/images/pattern-lines.svg),
+       url(./assets/images/pattern-squiggly-line-bottom-desktop.svg),
+       url(./assets/images/pattern-squiggly-line-top.svg);
+  background-position: center, top -8% left 4%, right 35% bottom 45%,bottom, bottom -5% left, top 15% right;
+  
+  background-size: 100%, 10%, 10%, 95%, 55%, 28%;
+  background-repeat: no-repeat,no-repeat,no-repeat,no-repeat,no-repeat,no-repeat;
+  /* background-color: hsl(248, 70%, 10%); */
+  background-blend-mode: overlay;
+  height: 100vh;
+  display: flex; 
   align-items: center;
-  justify-content: center; */
+  justify-content: center;
 }
 .container{
+    margin-bottom: 160px;
+    padding: 15px 25px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,13 +171,106 @@ body {
     text-align: center;
 }
 h1{
-    font-weight: 900;
+    font-size: 34px;
+    font-weight: 800;
     color: hsl(0, 0%, 100%);
+    padding-bottom: 15px;
 }
-h6, .form label{
+h5, .form{
     color: hsl(252, 6%, 83%);
 }
-.top-head{
-    max-width: 100%;
+h5 {
+  font-size: 14px;
+  font-weight: 400;
+  padding-bottom: 27px;
+}
+#logo-full{
+    width: 27%;
     height: auto;
+    padding-bottom: 30px;
+    margin-top: 55px;
+}
+.form{ 
+  margin: 0 auto;
+  width: 60%;
+  text-align: left;
+}
+/* button{
+ width: 100%;
+} */
+.form-label {
+  font-size: 12px;
+  font-weight: 500;
+}
+.form-input, .form-submit-button {
+  margin-top: 6px;
+  margin-bottom: 10px;
+}
+.img-info {
+  margin-bottom: 10px;
+  font-size: 7px;
+  letter-spacing: 0.5px;
+}
+.icon-info {
+  display: inline-block;
+  width: 3.5%;
+  height: 4%;
+}
+.avatar-accept-box {
+  width: 277px;
+  height: 75px;
+  border: 0.05px dashed hsl(252, 6%, 83%);
+  border-radius: 8px;
+  background: rgba(135, 132, 164, .17);
+  font-size: 10px;
+  font-weight: 400;
+  text-align: center;
+  margin-top: 6px;
+  margin-bottom: 5px
+}
+.form-input{
+  width: 265px;
+  height: 18px;
+  border: 0.05px solid hsl(252, 6%, 83%);
+  border-radius: 8px;
+  background: rgba(135, 132, 164,.17);
+  /* background: rgba(75, 72, 106,0.2); */
+  color: hsl(252, 6%, 83%);
+  outline: none;
+  font-family: 'Inconsolata', monospace;
+  padding: 7px;
+}
+.upload-image{
+  margin-top: 8px;
+  margin-bottom: 10px;
+  padding: 5px;
+  width: 25px;
+  height: 25px;
+  border: 0.05px solid rgba(135, 132, 164,0.2);
+  border-radius: 8px;
+  background: rgba(135, 132, 164, 0.2);
+}
+.form-submit-button{
+  width: 282px;
+  height: 32px;
+  background: hsl(7, 71%, 60%);
+  border: 0.1px solid hsl(7, 71%, 60%);
+  border-radius: 8px;
+  font-family: 'Inconsolata';
+  font-weight: 700;
+  font-size: 12px;
+}
+.form-input:hover {
+  cursor: pointer;
+  background: rgba(135, 132, 164, 0.4);
+  border: 0.05px solid rgba(135, 132, 164, 0.6);
+}
+.avatar-accept-box:hover{
+  cursor: pointer;
+  background: rgba(135, 132, 164, 0.4);
+  border: 0.05px dashed rgba(135, 132, 164, 0.6);
+}
+.form-submit-button:hover {
+  cursor: pointer;
+  border: 1px solid hsl(7, 87%, 76%);
 }
