--- a/index.css
+++ b/index.css
@@ -176,7 +176,7 @@ h1{
     color: hsl(0, 0%, 100%);
     padding-bottom: 15px;
 }
-h5, .form{
+h5, .form, .remove-img, .change-img{
     color: hsl(252, 6%, 83%);
 }
 h5 {
@@ -190,7 +190,7 @@ h5 {
     padding-bottom: 30px;
     margin-top: 55px;
 }
-.form{ 
+.form-container{ 
   margin: 0 auto;
   width: 60%;
   text-align: left;
@@ -241,14 +241,29 @@ h5 {
   padding: 7px;
 }
 .upload-image{
-  margin-top: 8px;
+  margin-top: 10px;
   margin-bottom: 10px;
   padding: 5px;
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   border: 0.05px solid rgba(135, 132, 164,0.2);
   border-radius: 8px;
   background: rgba(135, 132, 164, 0.2);
+}
+.remove-img, .change-img {
+  font-family: 'Inconsolata';
+  display: none;
+  justify-content: center;
+  height: 15px;
+  width: 58px;
+  font-size: .7em;
+  border: 0.01px solid rgba(135, 132, 164, 0.2);
+  border-radius: 2px;
+  background: rgba(135, 132, 164,0.3);
+
+}
+.remove-img {
+  text-decoration: underline;
 }
 .form-submit-button{
   width: 282px;
@@ -260,7 +275,7 @@ h5 {
   font-weight: 700;
   font-size: 12px;
 }
-.form-input:hover {
+.form-input:hover, .remove-img:hover, .change-img:hover {
   cursor: pointer;
   background: rgba(135, 132, 164, 0.4);
   border: 0.05px solid rgba(135, 132, 164, 0.6);
@@ -274,3 +289,20 @@ h5 {
   cursor: pointer;
   border: 1px solid hsl(7, 87%, 76%);
 }
+/* .input-empty-error {
+  position: relative;
+    
+    border: 1px solid black;
+    
+    padding: 10px;
+}
+.input-empty-error::after{
+  content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 3px solid blue;
+    z-index: -1;
+} */
