completed ticket.html design

--- a/index.css
+++ b/index.css
@@ -184,7 +184,7 @@ h5 {
   font-weight: 400;
   padding-bottom: 27px;
 }
-#logo-full{
+.logo-full{
     width: 27%;
     height: auto;
     padding-bottom: 30px;
